# hk-handicapper

./: .gitignore  GEMINI.md  LICENSE  Makefile  README.md  pyproject.toml
configs/: data_sources.yaml  features_place_v1.yaml  project.yaml  risk.yaml
docs/: MODEL_CARD_PLACE.md  RUNBOOK.md
kb/: README.md
sql/: 01_datasets.sql  03_indexes.sql
